# brahmx-sdg

./: .env.example  .gitignore  MANIFEST.md  Makefile  README.md  brahmx_sdg_pipeline.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: corpus_manifest.yaml
configs/gates/: gold_gates.yaml
configs/routing/: models.yaml
configs/specs/: cell_biology_mitosis.json  linear_algebra_eigenvalues.json  thermodynamics_first_law.json
configs/training/: sft_gold_8b.yaml
docs/: INDEX.md  ROADMAP.md
docs/adrs/: ADR-001-two-plane-architecture.md
docs/hld/: HLD.md  HLD_CRITIQUE.md
docs/lld/: LLD.md  SERVICE_RUNTIME.md
docs/runbooks/: gold_pipeline_failure.md
experiments/: ABLATION_PLAN.md
pipelines/gold/: gold_pipeline.py
pipelines/training/: training_pipeline.py
pipelines/vertex/: .env.example  .image_uri.env  Dockerfile  build_and_push.sh  components.py  pipeline.py  requirements.txt  setup_iam.sh
scripts/: upload_to_gcs.sh
src/brahmx_sdg/: __init__.py  cli.py
src/brahmx_sdg/common/: __init__.py
src/brahmx_sdg/corpus/: corpus_assembler.py
src/brahmx_sdg/evals/: eval_runner.py
src/brahmx_sdg/generation/: gold_generator.py  silver_generator.py
src/brahmx_sdg/governance/: provenance_registry.py  release_governance.py
src/brahmx_sdg/ingestion/: source_ingestion.py
src/brahmx_sdg/kb/: evidence_pack_builder.py
src/brahmx_sdg/lanes/: base_lane.py  code_tool_lane.py  curriculum_lane.py  dialogue_lane.py  latex_lane.py  multilingual_lane.py  reasoning_budget_lane.py  simulation_json_lane.py
src/brahmx_sdg/packaging/: bundle_assembler.py  canonicalizer.py  slice_emitter.py
src/brahmx_sdg/prompt/: constructor.py
src/brahmx_sdg/routing/: __init__.py
src/brahmx_sdg/schemas/: __init__.py
src/brahmx_sdg/training/: distillation_recovery_launcher.py  long_context_recovery_launcher.py  maxtext_training_launcher.py
src/brahmx_sdg/verification/: auditor.py  citation_checker.py  code_exec_validator.py  dean.py  latex_compile_validator.py  symbolic_numeric_validator.py
tests/unit/: test_core.py
